--- a/index.html
+++ b/index.html
@@ -25,16 +25,24 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
-        <figure>
-          <img src="files/user.jpg" width="928" height="536" alt="Фотография Енота">
-        </figure>
+        <div class="avatar-container">
+          <img  class="avatar" src="files/user.jpg"  alt="Фотография Енота">
+        </div>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
       <p>Текст о том, чем могу быть полезен.</p>
-      </div>>
+      </div>
     </section>
-
+      <div class="skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">     HTML </dt>
+          <dd class="level">          <div style="width: 60%">60%</div> </dd>
+          <dt class="skill-css">      CSS </dt>
+          <dd class="level">          <div style="width: 40%">40%</div> </dd>
+        </dl> 
+      </div>
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
@@ -46,7 +54,7 @@
          <a class="button" href="source/project/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
-      </div>>
+      </div>
     </section>
 
     <footer class="page-footer">
